second commit - decreased the video title margintop on smaller devices on watch page & also fixed the link overflowing issue in comment text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -171,3 +171,9 @@ body.dark::-webkit-scrollbar-thumb {
     height: 75px;
   }
 }
+
+/* Comment Text Link Overflowing Solution */
+.comment-text {
+  word-wrap: break-word;
+  word-break: break-word;
+}
